--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <div class="overlay"></div>
     </div>
   </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/renanschotten">Renan Schotten</a>.
-  </div>
+  <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/renanschotten" target="_blank">Renan Schotten</a>.</p>
+  </footer>
 </body>
 
 </html>
