background-image fix

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       </table>
     </div>
     <div class="image">
-      <div class="overlay"></div>
+      <div class="overlay">
+      </div>
     </div>
   </div>
   <footer class="attribution">
