--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Frontend Mentor | Stats preview card component</title>
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
