--- a/index.html
+++ b/index.html
@@ -21,23 +21,27 @@
         Discover the benefits of data analytics and make better decisions regarding revenue, customer
         experience, and overall efficiency.
       </p>
-      <table>
-        <tr>
-          <td><span>10k+</span><br>COMPANIES</td>
-          <td><span>314</span><br>TEMPLATES</td>
-          <td><span>12M+</span><br>QUERIES</td>
-        </tr>
-      </table>
+      <div class="stats">
+        <div>
+          <p><span>10k+</span><br>COMPANIES</p>
+        </div>
+        <div>
+          <p><span>314</span><br>TEMPLATES</p>
+        </div>
+        <div>
+          <p><span>12M+</span><br>QUERIES</p>
+        </div>
+      </div>
     </div>
     <div class="image">
       <div class="overlay">
       </div>
     </div>
   </div>
-  <footer class="attribution">
+  <div class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/renanschotten" target="_blank">Renan Schotten</a>.</p>
-  </footer>
+      Coded by <a href="https://github.com/renanschotten" target="_blank">Renan Schotten</a>.</p>
+  </div>
 </body>
 
 </html>
